--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>M4 Metro Pub | Ultimate v2</title>
+    <title>M4 Metro Pub</title>
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
     <script src="https://www.gstatic.com/firebasejs/9.15.0/firebase-app-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/9.15.0/firebase-database-compat.js"></script>
@@ -41,9 +41,9 @@
             <option value="#ffb400">Altın Sarısı</option>
             <option value="#00f2ff">Neon Mavi</option>
             <option value="#ff00ff">M4 Pembe</option>
-            <option value="#00ff00">Ray Yeşili</option>
+            <option value="#00ff00">Fosforlu Yeşil</option>
         </select>
-        <button onclick="handleAuth()">SİSTEME GİR</button>
+        <button onclick="handleAuth()">MEGANA GİRİJ YAB</button>
     </div>
 
     <div id="main-ui" class="hidden" style="width: 100%; max-width: 480px;">
@@ -203,3 +203,4 @@
     </script>
 </body>
 </html>
+
